--- a/Gioh0/Gioh0.html
+++ b/Gioh0/Gioh0.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rússia</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
+
+
 <body>
-    
+    <!-- Breadcrumb -->
+
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Início</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Rússia</li>
+        </ol>
+    </nav>
+    <!-- jumbotron -->
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                        <h1 class="display-4">Rússia</h1>
+                        <p class="lead">É o maior país do planeta, cobrindo mais de um nono da superfície terrestre. É
+                            também o nono país mais populoso, com 142 milhões de habitantes.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    </div>
+
+    <!-- imagens -->
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-4 p-3"><img src="../Gioh0/images/bandeira.jpg" class="img-fluid"> </div>
+            <div class="col-4 p-3"><img src="../Gioh0/images/824140.jpg" class="img-fluid"></div>
+            <div class="col-4 p-3"><img src="../Gioh0/images/c5126467873ada2e0d8a13d83df0b1b8.jpg" class="img-fluid"></div>
+            <div class="col-4 p-3"><img src="../Gioh0/images/foto.jpg" class="img-fluid"></div>
+            <div class="col-4 p-3"><img src="../Gioh0/images/R.jpg" class="img-fluid"></div>
+            <div class="col-4 p-3"><img src="../Gioh0/images/russia.jpg" class="img-fluid"></div>
+                </div-4 p-3    </div>
+
+
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
