--- a/gabriellystefani/gabriellystefani.html
+++ b/gabriellystefani/gabriellystefani.html
@@ -5,8 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Itália</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
+
 <body>
-    
+
+
+<!--Breadcrumb-->
+
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="#">Início</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Itália</li>
+        </ol>
+      </nav>
+
+<!--Jumbotron-->
+      <div class="container-fluid">
+        <div class="row">
+            <div class="col-12"><div class="jumbotron jumbotron-fluid">
+
+                <div class="container">
+
+                  <h1 class="display-4">Itália</h1>
+                  <p class="lead">Este é um jumbotron modificado que ocupa todo o espaço horizontal de seu elemento pai.</p>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+
+      <!--Imagens-->
+
+      <div class="container-fluid">
+        <div class="row">
+            <div class="col-4 p-5"><img src="../gabriellystefani/imagens/imagem1.jpg" class="img-fluid"  alt=""></div>
+            <div class="col-4 p-5"><img src="../gabriellystefani/imagens/imagem2.jpg"  class="img-fluid" alt=""></div>
+            <div class="col-4 p-5"><img src="../gabriellystefani/imagens/imagem3.jpg"  class="img-fluid" alt=""></div>
+            <div class="col-4 p-5"><img src="../gabriellystefani/imagens/imagem4.jpg" class="img-fluid"  alt=""></div>
+            <div class="col-4 p-5"><img src="../gabriellystefani/imagens/imagem5.jpg"  class="img-fluid" alt=""></div>
+            <div class="col-4 p-5"><img src="../gabriellystefani/imagens/imagem6.jpg"  class="img-fluid" alt=""></div>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+
 </body>
 </html>
