--- a/FeMott4/FeMotta4.html
+++ b/FeMott4/FeMotta4.html
@@ -5,8 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>França</title>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <!-- Breadcrumb -->
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="#">Início</a></li>
+          <li class="breadcrumb-item active" aria-current="page">França</li>
+        </ol>
+    </nav>
+
+    <!-- Jumbotron -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                      <h1 class="display-4">França</h1>
+                      <p class="lead">Venha conhecer o meu país, um dos mais ricos históricamente, a França. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Imagens -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-4 p-3"><img src="./imagens/badeira.jpg" alt="Imagem"></div>
+            <div class="col-4 p-3"><img src="./imagens/img2.jpg" alt="Imagem"></div>
+            <div class="col-4 p-3"><img src="./imagens/img3.jpg" alt="Imagem"></div>
+            <div class="col-4 p-3"><img src="./imagens/img4.jpg" alt="Imagem"></div>
+            <div class="col-4 p-3"><img src="./imagens/img5.jpg" alt="Imagem"></div>
+            <div class="col-4 p-3"><img src="./imagens/img6.jpg" alt="Imagem"></div>
+        </div>
+    </div>
+
+
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 </body>
 </html>
