--- a/perezfagundes/perezfagundes.html
+++ b/perezfagundes/perezfagundes.html
@@ -5,8 +5,80 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>alemanha</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
-    
+   <!--breadcrumb-->
+
+    <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#">inicio</a></li>
+      <li class="breadcrumb-item active" aria-current="page">alemanha</li>
+    </ol>
+  </nav>
+
+<!--jumbotron-->
+
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-12"></div>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">Alemanha</h1>
+              <p class="lead">"A Alemanha é o país mais populoso (sem contar a Rússia) e rico da Europa, tendo grande relevância nas decisões regionais e mundiais nos mais variados níveis: política, economia, aspectos sociais, entre outros."</p>
+            </div>
+          </div>
+    </div>
+  </div>
+
+  <!--imagens-->
+
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-4 p-3"><img src="./images/berlim.jpg" alt="">berlim</div>
+        <div class="col-4 p-3"><img src="./images/estados.jpg" alt="">estados</div>
+        <div class="col-4 p-3"><img src="./images/governo.jpeg" alt="">governo</div>
+        <div class="col-4 p-3"><img src="./images/paisagem.jpg" alt="">paisagem</div>
+        <div class="col-4 p-3"><img src="./images/ponte.jpg" alt="">ponte</div>
+        <div class="col-4 p-3"><img src="./images/pontos.jpg" alt="">pontos turisticos</div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> 
 </body>
 </html>
