--- a/car2617/car2617.html
+++ b/car2617/car2617.html
@@ -39,12 +39,41 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-4 p-3"><img src=".//img/dois.jpg" class="img-fluid"></div> <p></p>
-            <div class="col-4 p-3"><img src=".//img/img.jpg" class="img-fluid"></div> <p></p>
-            <div class="col-4 p-3"><img src=".//img/images.jpg"class="img-fluid" ></div> <p></p>
-            <div class="col-4 p-3"><img src=".//img/um.jpg" class="img-fluid"></div> <p></p>
-            <div class="col-4 p-3"><img src=".//img/images.jpg" class="img-fluid"></div> <p></p> 
-            <div class="col-4 p-3"><img src=".//img/trez.jpg" class="img-fluid"></div> <p></p>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3"><img src=".//img/dois.jpg" class="img-fluid"></div> <p></p>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3"><img src=".//img/img.jpg" class="img-fluid"></div> <p></p>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3"><img src=".//img/images.jpg"class="img-fluid" ></div> <p></p>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3"><img src=".//img/um.jpg" class="img-fluid"></div> <p></p>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3"><img src=".//img/images.jpg" class="img-fluid"></div> <p></p> 
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3"><img src=".//img/trez.jpg" class="img-fluid"></div> <p></p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 p-3">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="alert alert-primary" role="alert">
+                            Cadastre para receber mais informação
+                          </div>
+                        <form>
+                            <div class="form-group">
+                              <label for="exampleInputEmail1">Endereço de email</label>
+                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
+                              <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+                            </div>
+                            <div class="form-group">
+                              <label for="exampleInputPassword1">Senha</label>
+                              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+                            </div>
+                            <div class="form-group form-check">
+                              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                              <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Enviar</button>
+                          </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
