--- a/biaevellyn/biaevellyn.html
+++ b/biaevellyn/biaevellyn.html
@@ -1,50 +1,111 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brasil</title>
-    <link rel="stylesheet" href=""><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </head>
-    <link rel="stylesheet" href="../assets/css/styles.css">
+<link rel="stylesheet" href="../assets/css/styles.css">
+
 <body>
     <!-- breadcrumb -->
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="#">Home</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Biblioteca</li>
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Biblioteca</li>
         </ol>
-      </nav>
+    </nav>
     <!--Jumbotron  -->
-      <div class="container-fluid">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-12">
                 <div class="jumbotron jumbotron-fluid">
                     <div class="container">
-                      <h1 class="display-4">Brasil </h1>
-                      <p class="lead"> É o maior país da América do Sul da região da América Latina, sendo o quinto maior do mundo em área territorial.</p>
-                      <p>O Brasil oferece aos turistas nacionais e internacionais uma ampla gama de opções, <br> sendo que as áreas naturais são o seu produto turístico mais popular, <br> 
-                        uma combinação de ecoturismo com lazer e recreação, principalmente sol e praia e turismo de aventura, <br> bem como o turismo histórico e cultural.</p>
+                        <h1 class="display-4">Brasil </h1>
+                        <p class="lead"> É o maior país da América do Sul da região da América Latina, sendo o quinto
+                            maior do mundo em área territorial.</p>
+                        <p>O Brasil oferece aos turistas nacionais e internacionais uma ampla gama de opções, <br> sendo
+                            que as áreas naturais são o seu produto turístico mais popular, <br>
+                            uma combinação de ecoturismo com lazer e recreação, principalmente sol e praia e turismo de
+                            aventura, <br> bem como o turismo histórico e cultural.</p>
                     </div>
-                  </div>
+                </div>
             </div>
         </div>
-      </div>
+    </div>
 
-      <div class="container-fluid">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-4"><img src="../biaevellyn/images/Amazonia.jpg" class="img-fluid" alt=""><p>Amazônia brasileira</p></div>
-            <div class="col-4"><img src="../biaevellyn//images/leiçois.png" class="img-fluid" alt=""><p>Lençóis maranhenses</p></div>
-            <div class="col-4"><img src="../biaevellyn/images/Riodejane.jpg" class="img-fluid" alt=""><p>Rio de Janeiro</p></div>
-            <div class="col-4"><img src="../biaevellyn/images/salvador.jpg"  class="img-fluid"alt=""><p>Salvador</p></div>
-            <div class="col-4"><img src="../biaevellyn/images/Praia-grande.jpg"  class="img-fluid"alt=""><p>Praia Grande</p></div>
-            <div class="col-4"><img src="../biaevellyn/images/paraty.jpg"  class="img-fluid"alt=""><p>Paraty</p></div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 P-3"><img src="../biaevellyn/images/Amazonia.jpg" class="img-fluid"
+                    alt="">
+                <p>Amazônia brasileira</p>
+            </div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 P-3"><img src="../biaevellyn//images/leiçois.png" class="img-fluid"
+                    alt="">
+                <p>Lençóis maranhenses</p>
+            </div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 P-3"><img src="../biaevellyn/images/Riodejane.jpg" class="img-fluid"
+                    alt="">
+                <p>Rio de Janeiro</p>
+            </div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 P-3"><img src="../biaevellyn/images/salvador.jpg" class="img-fluid"
+                    alt="">
+                <p>Salvador</p>
+            </div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 P-3"><img src="../biaevellyn/images/Praia-grande.jpg"
+                    class="img-fluid" alt="">
+                <p>Praia Grande</p>
+            </div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 P-3"><img src="../biaevellyn/images/paraty.jpg" class="img-fluid"
+                    alt="">
+                <p>Paraty</p>
+            </div>
         </div>
-      </div>
+    </div>
+
+    <!-- Formulário -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12 P-3">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="alert alert-primary" role="alert">
+                            Cadastre-se para receber mais informações sobre o Brasil
+                        </div>
+                        <form>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Endereço de email</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp" placeholder="Seu email">
+                                <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email,
+                                    com ninguém.</small>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Senha</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1"
+                                    placeholder="Senha">
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Enviar</button>
+                        </form>
+                     </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 
 
@@ -55,11 +116,12 @@
 
 
 
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" 
-integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
