--- a/Gioh0/Gioh0.html
+++ b/Gioh0/Gioh0.html
@@ -47,25 +47,59 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-4 p-3"><img src="../Gioh0/images/bandeira.jpg" class="img-fluid"> </div>
-            <div class="col-4 p-3"><img src="../Gioh0/images/824140.jpg" class="img-fluid"></div>
-            <div class="col-4 p-3"><img src="../Gioh0/images/c5126467873ada2e0d8a13d83df0b1b8.jpg" class="img-fluid"></div>
-            <div class="col-4 p-3"><img src="../Gioh0/images/foto.jpg" class="img-fluid"></div>
-            <div class="col-4 p-3"><img src="../Gioh0/images/R.jpg" class="img-fluid"></div>
-            <div class="col-4 p-3"><img src="../Gioh0/images/russia.jpg" class="img-fluid"></div>
-                </div-4 p-3    </div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3 "><img src="../Gioh0/images/bandeira.jpg" class="img-fluid">
+            </div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3 "><img src="../Gioh0/images/824140.jpg" class="img-fluid"></div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3 "><img
+                    src="../Gioh0/images/c5126467873ada2e0d8a13d83df0b1b8.jpg" class="img-fluid"></div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3 "><img src="../Gioh0/images/foto.jpg" class="img-fluid"></div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3 "><img src="../Gioh0/images/R.jpg" class="img-fluid"></div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3 "><img src="../Gioh0/images/russia.jpg" class="img-fluid"></div>
+            <div-4 p-3>
+        </div>
 
+        <!-- formulário -->
 
+        <div class="container">
 
+                <div class="row">
+                    <div class="col-12 p-3">
+                        <div class="col-12">
+                            <div class="alert alert-primary" role="alert">
+                                Cadastre-se para receber mais informações sobre Rússia!
+                            </div>
+                            <form>
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1">Endereço de email</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                        aria-describedby="emailHelp" placeholder="Seu email">
+                                    <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email,
+                                        com
+                                        ninguém.</small>
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputPassword1">Senha</label>
+                                    <input type="password" class="form-control" id="exampleInputPassword1"
+                                        placeholder="Senha">
+                                </div>
+                                <div class="form-group form-check">
+                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                    <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Enviar</button>
+                            </form>
+                        </div>
+                    </div>
 
+                </div>
+        </div>
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
 
 </body>
 
