--- a/gabriellystefani/gabriellystefani.html
+++ b/gabriellystefani/gabriellystefani.html
@@ -41,16 +41,46 @@
 
       <div class="container-fluid">
         <div class="row">
-            <div class="col-4 p-5"><img src="../gabriellystefani/imagens/imagem1.jpg" class="img-fluid"  alt=""></div>
-            <div class="col-4 p-5"><img src="../gabriellystefani/imagens/imagem2.jpg"  class="img-fluid" alt=""></div>
-            <div class="col-4 p-5"><img src="../gabriellystefani/imagens/imagem3.jpg"  class="img-fluid" alt=""></div>
-            <div class="col-4 p-5"><img src="../gabriellystefani/imagens/imagem4.jpg" class="img-fluid"  alt=""></div>
-            <div class="col-4 p-5"><img src="../gabriellystefani/imagens/imagem5.jpg"  class="img-fluid" alt=""></div>
-            <div class="col-4 p-5"><img src="../gabriellystefani/imagens/imagem6.jpg"  class="img-fluid" alt=""></div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3"><img src="../gabriellystefani/imagens/imagem1.jpg" class="img-fluid"  alt=""></div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3"><img src="../gabriellystefani/imagens/imagem2.jpg"  class="img-fluid" alt=""></div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3"><img src="../gabriellystefani/imagens/imagem3.jpg"  class="img-fluid" alt=""></div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3"><img src="../gabriellystefani/imagens/imagem4.jpg" class="img-fluid"  alt=""></div>
+            <div class=" col-xs-12 col-lg-6 col-xl-4 p-3"><img src="../gabriellystefani/imagens/imagem5.jpg"  class="img-fluid" alt=""></div>
+            <div class="col-xs-12 col-lg-6 col-xl-4 p-3"><img src="../gabriellystefani/imagens/imagem6.jpg"  class="img-fluid" alt=""></div>
         </div>
       </div>
 
 
+      <!--Formulário-->
+        <div class="container">
+        <div class="row">
+            <div class="col-12 p-3"> 
+                <div class="alert alert-primary" role="alert">
+                    Cadastre-se para receber mais informações!
+                </div>            
+                <form>
+                    <div class="form-group">
+                    <label for="exampleInputEmail1">Endereço de email</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
+                    <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+                    </div>
+                    <div class="form-group">
+                    <label for="exampleInputPassword1">Senha</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+                    </div>
+                    <div class="form-group form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+    
+                    <div class="row">
+                        <div class="col-8"></div>
+                    </div>
+                </form>     
+            </div>
+        </div>
+      </div>
 
 
 
