--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="" type="button" class="btn btn-dark mb-2">Femott4</a>
                 <a href="" type="button" class="btn btn-dark mb-2">Guiplacie</a>
                 <a href="" type="button" class="btn btn-dark mb-2">PerezFagundes</a>
-                <a href="" type="button" class="btn btn-dark mb-2">GabriellyStefani</a>
+                <a href="gabriellystefani/gabriellystefani.html" type="button" class="btn btn-dark mb-2">Itália</a>
                 <a href="" type="button" class="btn btn-dark mb-2">Nafibragomes</a>
             </div>
         </div>
