--- a/guiplacie/guiplacie.html
+++ b/guiplacie/guiplacie.html
@@ -32,12 +32,44 @@
       <!-- imagens -->
       <div class="container-fluid">
           <div class="row">
-              <div class="div col-4 p-2 " ><img src="images/download (1).jfif" alt=""></div>
-              <div class="div col-4 p-2 "><img src="images/download.jfif" alt=""></div>
-              <div class="div col-4 p-2"><img src="images/download.png" alt=""></div>
-              <div class="div col-4 p-2"><img src="images/images (1).jfif" alt=""></div>
-              <div class="div col-4 p-2"><img src="images/images (2).jfif" alt=""></div>
-              <div class="div col-4 p-2"><img src="images/images.jfif" alt=""></div>
+              <div class="col-xs-12 col-lg-6 col-xl-4 p-2" ><img src="images/download (1).jfif" alt=""></div>
+              <div class="col-xs-12 col-lg-6 col-xl-4 p-2"><img src="images/download.jfif" alt=""></div>
+              <div class="col-xs-12 col-lg-6 col-xl-4 p-2"><img src="images/download.png" alt=""></div>
+              <div class="col-xs-12 col-lg-6 col-xl-4 p-2"><img src="images/images (1).jfif" alt=""></div>
+              <div class="col-xs-12 col-lg-6 col-xl-4 p-2"><img src="images/images (2).jfif" alt=""></div>
+              <div class="col-xs-12 col-lg-6 col-xl-4 p-2"><img src="images/images.jfif" alt=""></div>
+          </div>
+      </div>
+      <!-- Formulário -->
+      <div class="container">
+          <div class="row">
+              <div class="col-12 p-3">
+                  <div class="row">
+                      <div class="col-12">
+                        <div class="alert alert-info" role="alert">
+                            Cadastre-se para receber mais informações
+                          </div>
+                        <form>
+                            <div class="form-group">
+                              <label for="exampleInputEmail1">Endereço de email</label>
+                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
+                              <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+                            </div>
+                            <div class="form-group">
+                              <label for="exampleInputPassword1">Senha</label>
+                              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+                            </div>
+                            <div class="form-group form-check">
+                              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                              <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Enviar</button>
+                          </form>
+
+                      </div>
+                  </div>
+                
+              </div>
           </div>
       </div>
 
