--- a/juaozinpjl/juaozinpjl.html
+++ b/juaozinpjl/juaozinpjl.html
@@ -1,12 +1,135 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Argentina</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
+        <link rel="stylesheet" href="../assets/css/styles.css">
+
 </head>
+
 <body>
-    
+    <!-- breadcrumb -->
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Início</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Argentina</li>
+        </ol>
+    </nav>
+
+
+    <!-- Jumbotron -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                        <h1 class="display-4">Argentina</h1>
+                        <p class="lead">Argentina é um país muito tradicional, e também são os atuais vencedores da copa
+                            do mundo</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- imagens -->
+
+
+ <div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-6 p-3
+        " ><img src="../juaozinpjl/images/agre.jpg"class="img-fluid" alt=""></div>
+        <div class="col-lg-6 p-3
+        " ><img src="../juaozinpjl/images/bandeiraargentina.jpg"class="img-fluid" alt=""></div>
+        <div class="col-lg-6 p-3
+        " ><img src="../juaozinpjl/images/buenosaires.jpg"class="img-fluid" alt=""></div>
+        <div class="col-lg-6 p-3
+        " ><img src="../juaozinpjl/images/messi.jpg"class="img-fluid" alt=""></div>
+        <div class="col-lg-6 p-3
+        " ><img src="../juaozinpjl/images/FIFA 22 Partida de Carreira 0-1 BSC X STC, 2º tempo_1.jpg"class="img-fluid" alt=""></div>
+        <div class="col-lg-6 p-3
+        " ><img src="../juaozinpjl/images/FIFA 23 Partida de Carreira 3-3 BRE X WHU, 2º tempo_4.jpg"class="img-fluid" alt=""></div>
+    </div>
+ </div>
+
+ <!-- formulário -->
+
+ <div class="container">
+    <div class="row">
+        <div class="col-12 p-3 "><form>
+
+
+
+
+               <div class = "row">
+                          <div class="col-8">
+
+                            <div class="alert alert-primary" role="alert">
+                                cadastre-se para receber mais informações da argentina
+                               </div>
+                          </div>
+                       
+              </div>
+
+
+
+            <div class="form-group">
+              <label for="exampleInputEmail1">Endereço de email</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
+              <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Senha</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+            </div>
+            <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </form></div>
+
+    </div>
+ </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
